# iwslt2026

./: .gitignore  pyproject.toml
configs/experiment/: stage1.yaml  stage2.yaml  stage3.yaml  stage4_full.yaml  stage4_llm.yaml
scripts/: export_checkpoint.py
src/st/data/: collator.py  dataset.py
src/st/inference/: ctc_generate.py  generate.py  mic.py
src/st/models/: speech_aura.py
src/st/training/: pretrain_encoder.py  train_st.py
tests/: test_forward.py
