[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iwslt2026"
version = "0.2.0"
description = "End-to-end speech translation for IWSLT 2026 — Aura-1B backend"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "soundfile>=0.12.0",
    "pyyaml>=6.0",
    "sacrebleu>=2.4.0",
    "jiwer>=3.0.0",
    "wandb>=0.16.0",
    "tqdm>=4.66.0",
]

[project.scripts]
speech-aura     = "st.inference.generate:main"
ctc-encoder     = "st.inference.ctc_generate:main"
speech-aura-mic = "st.inference.mic:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
]
mic = [
    "sounddevice>=0.4.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
